notes/syntax.ebnf
# This document is very old and wrong

statement_list = { statement }
statement = comment
          | function_decl
          | type_decl
          | if_block
          | for_block
          | do_once_block
          | stateful_value_decl
          | return_statement
          | include_statement
          | discard_statement
          | expression_statement

expression_statement = [ accessor '=' ] infix_expression_0

accessor = identifier [ '[' infix_expression_0 ']' ] [ '.' accessor ]

infix_expression_0 = infix_expression_1 [(':=' | '<-') infix_expression_0]
infix_expression_1 = infix_expression_2 [('->') infix_expression_1]
infix_expression_2 = infix_expression_3 [('+=' | '-=' | '*=' | '/=') infix_expression_2]
infix_expression_3 = infix_expression_4
infix_expression_4 = infix_expression_5 [('and' | 'or') infix_expression_4]
infix_expression_5 = infix_expression_6 [('<=' | '<' | '>' | '>=') infix_expression_5]
infix_expression_6 = infix_expression_7 [('+' | '-') infix_expression_6]
infix_expression_7 = infix_expression_8 [('*' | '/' | '//') infix_expression_7]
infix_expression_8 = unary_expression [(':') infix_expression_8]

unary_expression = ('-' subscripted_atom) | ('@' subscripted_atom) | subscripted_atom

subscripted_atom = atom [ ('[' infix_expression_0 ']') | ('(' argument_list ')') ]

atom = identifier
     | identifier_with_rebind
     | literal_integer
     | literal_string
     | literal_bool
     | literal_hex
     | literal_float
     | literal_color
     | literal_list
     | plain_branch
     | namespace_block
     | '(' infix_expression_0 ')'

identifier = identifier_token [ ':' identifier ]
identifier_with_rebind = '@' identifier_token

argument_list = infix_expression_0 [ [','] argument_list]
