src/parser.cpp
// Copyright (c) Andrew Fischer. See LICENSE file for license terms.

#include "common_headers.h"

#include "branch.h"
#include "building.h"
#include "evaluation.h"
#include "loops.h"
#include "function.h"
#include "if_block.h"
#include "handle.h"
#include "introspection.h"
#include "list.h"
#include "kernel.h"
#include "modules.h"
#include "parser.h"
#include "source_repro.h"
#include "stateful_code.h"
#include "static_checking.h"
#include "string_type.h"
#include "switch_block.h"
#include "names.h"
#include "term.h"
#include "token.h"
#include "type.h"

namespace circa {
namespace parser {

Term* compile(Branch* branch, ParsingStep step, std::string const& input)
{
    log_start(0, "parser::compile");
    log_arg("branch.id", branch->id);
    log_arg("input", input.c_str());
    log_finish();

    ca_assert(input != NULL);

    branch_start_changes(branch);

    TokenStream tokens(input);
    ParserCxt context;
    Term* result = step(branch, tokens, &context).term;

    branch_finish_changes(branch);

    ca_assert(branch_check_invariants_print_result(branch, std::cout));

    log_start(0, "parser::compile finished");
    log_arg("branch.length", branch->length());
    log_finish();

    return result;
}

Term* evaluate(Branch* branch, ParsingStep step, std::string const& input)
{
    int prevHead = branch->length();

    Term* result = compile(branch, step, input);

    Stack context;

    evaluate_range(&context, branch, prevHead, branch->length() - 1);

    return result;
}

// -------------------------- Utility functions -------------------------------

// This structure stores the syntax hints for list-like syntax. It exists because
// you usually don't have a comprehension term while you are parsing the list
// arguments, so you need to temporarily store syntax hints until you create one.
struct ListSyntaxHints {
    List inputs;

    void insert(int index)
    {
        set_dict(inputs.insert(index));
    }

    void set(int index, std::string const& field, std::string const& value)
    {
        while (index >= inputs.length())
            set_dict(inputs.append());

        Dict* dict = as_dict(inputs[index]);
        set_string(dict->insert(field.c_str()), value.c_str());
    }
    void set(int index, const char* field, caValue* value)
    {
        while (index >= inputs.length())
            set_dict(inputs.append());

        Dict* dict = as_dict(inputs[index]);
        copy(value, dict->insert(field));
    }

    void append(int index, std::string const& field, std::string const& value)
    {
        while (index >= inputs.length())
            set_dict(inputs.append());

        Dict* dict = as_dict(inputs[index]);

        caValue* existing = dict->insert(field.c_str());
        if (!is_string(existing))
            set_string(existing, "");

        set_string(existing, as_string(existing) + value);
    }

    void apply(Term* term)
    {
        for (int i=0; i < inputs.length(); i++) {
            Dict* dict = as_dict(inputs[i]);
            Value it;
            for (dict->iteratorStart(&it);
                    !dict->iteratorFinished(&it); dict->iteratorNext(&it)) {
                const char* key;
                caValue* value;
                dict->iteratorGet(&it, &key, &value);

                set_input_syntax_hint(term, i, key, value);
            }
        }
    }
};

void consume_branch(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    Term* parentTerm = branch->owningTerm;

    if (tokens.nextNonWhitespaceIs(tok_LBrace)) {
        consume_branch_with_braces(branch, tokens, context, parentTerm);
    } else {
        consume_branch_with_significant_indentation(branch, tokens, context, parentTerm);
    }

    return;
}

int find_indentation_of_next_statement(TokenStream& tokens)
{
    // Lookahead and find the next non-whitespace statement.
    int lookahead = 0;
    while (!tokens.finished()) {
        if (tokens.nextIs(tok_Whitespace, lookahead))
            lookahead++;
        else if (tokens.nextIs(tok_Newline, lookahead))
            lookahead++;
        else
            break;
    }

    if (lookahead >= tokens.remaining())
        return -1;

    return tokens.next(lookahead).colStart;
}

void consume_branch_with_significant_indentation(Branch* branch, TokenStream& tokens,
        ParserCxt* context, Term* parentTerm)
{
    ca_assert(parentTerm != NULL);
    ca_assert(parentTerm->sourceLoc.defined());

    parentTerm->setStringProp("syntax:branchStyle", "sigIndent");

    int parentTermIndent = tokens.next(-1).precedingIndent;

    // Consume the whitespace immediately after the heading (and possibly a newline).
    std::string postHeadingWs = possible_statement_ending(tokens);
    bool foundNewline = postHeadingWs.find_first_of("\n") != std::string::npos;

    parentTerm->setStringProp("syntax:postHeadingWs", postHeadingWs);

    // If we're still on the same line, keep consuming statements. We might only
    // find a comment (in which case we should keep parsing subsequent lines),
    // or we might find statements (making this a one-liner).
    bool foundStatementOnSameLine = false;

    if (!foundNewline) {
        while (!tokens.finished()) {

            // Special case for if-blocks. If we hit an if-block seperator then finish,
            // but don't consume it.
            if (tokens.nextIs(tok_Else) || tokens.nextIs(tok_Elif))
                return;

            Term* statement = parser::statement(branch, tokens, context).term;

            std::string const& lineEnding = statement->stringProp("syntax:lineEnding");
            bool hasNewline = lineEnding.find_first_of("\n") != std::string::npos;

            if (statement->function != FUNCS.comment)
                foundStatementOnSameLine = true;

            // If we hit a newline then stop parsing
            if (hasNewline) {

                // If we hit any statements on this line, then stop parsing here.
                // Example:
                //    def f() return 1 + 2
                // Also, steal this term's lineEnding and use it as the parent term's line
                // ending.
                if (foundStatementOnSameLine) {

                    parentTerm->setStringProp("syntax:lineEnding",
                            statement->stringProp("syntax:lineEnding"));
                    statement->removeProperty("syntax:lineEnding");
                }
                return;
            }
        }
    }

    // Lookahead and find the next non-whitespace statement.
    int lookahead = 0;
    while (!tokens.finished()) {
        if (tokens.nextIs(tok_Whitespace, lookahead))
            lookahead++;
        else if (tokens.nextIs(tok_Newline, lookahead))
            lookahead++;
        else
            break;
    }

    // Check if the next statement has an indentation level that is higher
    // or equal to the parent indentation. If so then stop and don't consume
    // any more.

    if (find_indentation_of_next_statement(tokens) <= parentTermIndent) {
        // Take the line ending that we parsed as postHeadingWs, and move it over
        // to lineEnding instead (so that we don't parse another line ending).
        parentTerm->setStringProp("syntax:lineEnding",
                parentTerm->stringProp("syntax:postHeadingWs"));
        parentTerm->removeProperty("syntax:postHeadingWs");
        return;
    }

    // At this point we're ready to parse some statements. The first statement
    // will tell us the indentation level for the whole block. But, we'll ignore
    // comments when figuring this out. Example:
    //     def f()
    //
    //             -- a misplaced comment
    //         a = 1
    //         return a + 2

    parentTerm->setBoolProp("syntax:multiline", true);

    int indentationLevel = 0;
    while (!tokens.finished()) {

        // Don't consume if the next identation is less than or equal to our starting
        // indent. We can get into this situation by the following code fragment:
        // 
        //     for i in []
        //         -- a comment
        //     next_line
        //
        if (find_indentation_of_next_statement(tokens) <= parentTermIndent)
            return;
        
        Term* statement = parser::statement(branch, tokens, context).term;

        if (statement->function != FUNCS.comment) {
            indentationLevel = int(statement->stringPropOptional(
                "syntax:preWhitespace", "").length());
            break;
        }
    }

    // Now keep parsing lines which have the same indentation level
    while (!tokens.finished()) {

        // Lookahead, check if the next line has the same indentation

        int nextIndent = 0;
        if (tokens.nextIs(tok_Whitespace))
            nextIndent = (int) tokens.next().length();

        // Check if the next line is just a comment/whitespace
        bool ignore = lookahead_match_whitespace_statement(tokens)
            || lookahead_match_comment_statement(tokens);

        if (!ignore && (indentationLevel != nextIndent))
            break;

        parser::statement(branch, tokens, context);
    }
}

void consume_branch_with_braces(Branch* branch, TokenStream& tokens, ParserCxt* context,
        Term* parentTerm)
{
    parentTerm->setStringProp("syntax:branchStyle", "braces");

    if (tokens.nextIs(tok_Whitespace))
        parentTerm->setStringProp("syntax:postHeadingWs", possible_whitespace(tokens));

    tokens.consume(tok_LBrace);

    while (!tokens.finished()) {
        if (tokens.nextIs(tok_RBrace)) {
            tokens.consume();
            return;
        }

        parser::statement(branch, tokens, context);
    }
}

// ---------------------------- Parsing steps ---------------------------------

ParseResult statement_list(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    ParseResult result;

    while (!tokens.finished())
        result = statement(branch, tokens, context);

    return result;
}

ParseResult statement(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int initialPosition = tokens.getPosition();
    std::string preWhitespace = possible_whitespace(tokens);

    int sourceStartPosition = tokens.getPosition();
    bool foundWhitespace = preWhitespace != "";

    ParseResult result;

    // Comment (blank lines count as comments). This should do the same thing
    // as matches_comment_statement.
    if (tokens.nextIs(tok_Comment) || tokens.nextIs(tok_Newline) || tokens.nextIs(tok_Semicolon)
        || (foundWhitespace && (tokens.nextIs(tok_RBrace) || tokens.nextIs(tok_End) || tokens.finished()))) {
        result = comment(branch, tokens, context);
    }

    // Function decl
    else if (tokens.nextIs(tok_Def)) {
        result = function_decl(branch, tokens, context);
    }

    // Type decl
    else if (tokens.nextIs(tok_Type)) {
        result = type_decl(branch, tokens, context);
    }

    // Do_once block
    else if (tokens.nextIs(tok_DoOnce)) {
        result = do_once_block(branch, tokens, context);
    }

    // Stateful value decl
    else if (tokens.nextIs(tok_State)) {
        result = stateful_value_decl(branch, tokens, context);
    }
    // Return statement
    else if (tokens.nextIs(tok_Return)) {
        result = return_statement(branch, tokens, context);
    }

    // Discard statement
    else if (tokens.nextIs(tok_Discard)) {
        result = discard_statement(branch, tokens, context);
    }
    // Break statement
    else if (tokens.nextIs(tok_Break)) {
        result = break_statement(branch, tokens, context);
    }
    // Continue statement
    else if (tokens.nextIs(tok_Continue)) {
        result = continue_statement(branch, tokens, context);
    }

    // Namespace block
    else if (tokens.nextIs(tok_Namespace)) {
        result = namespace_block(branch, tokens, context);
    }

    // Case statement
    else if (tokens.nextIs(tok_Case)) {
        result = case_statement(branch, tokens, context);
    }

    // Import statement
    else if (tokens.nextIs(tok_Import)) {
        result = import_statement(branch, tokens, context);
    }

    // Otherwise, expression statement
    else {
        result = expression_statement(branch, tokens, context);
    }

    prepend_whitespace(result.term, preWhitespace);

    set_source_location(result.term, sourceStartPosition, tokens);

    if (!is_multiline_block(result.term) && !result.term->hasProperty("syntax:lineEnding")) {

        // Consume some trailing whitespace
        append_whitespace(result.term, possible_whitespace(tokens));

        // Consume a newline or ; or ,
        result.term->setStringProp("syntax:lineEnding", possible_statement_ending(tokens));
    }

    // Mark this term as a statement
    set_is_statement(result.term, true);

    // Avoid an infinite loop
    if (initialPosition == tokens.getPosition())
        internal_error("parser::statement is stuck, next token is: " + tokens.nextStr());

    return result;
}

bool matches_comment_statement(Branch* branch, TokenStream& tokens)
{
    int lookahead = 0;
    bool foundWhitespace = false;
    if (tokens.nextIs(tok_Whitespace, lookahead)) {
        lookahead++;
        foundWhitespace = true;
    }

    int next = tokens.next(lookahead).match;
    return (next == tok_Comment || next == tok_Newline || next == tok_Semicolon ||
        (foundWhitespace &&
             (tokens.nextIs(tok_RBrace) || tokens.nextIs(tok_End) || tokens.finished())));
}

ParseResult comment(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    std::string commentText;

    if (tokens.nextIs(tok_Comment)) {
        commentText = tokens.nextStr();
        tokens.consume();
    }

    Term* result = apply(branch, FUNCS.comment, TermList());
    result->setStringProp("comment", commentText);

    return ParseResult(result);
}

ParseResult type_expr(Branch* branch, TokenStream& tokens,
        ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    ParseResult result;

    if (tokens.nextIs(tok_LBracket)) {
        result = anonymous_type_decl(branch, tokens, context);
        if (has_static_error(result.term))
            return compile_error_for_line(result.term, tokens, startPosition);

    } else {
        if (!tokens.nextIs(tok_Identifier))
            return compile_error_for_line(branch, tokens, startPosition);

        std::string typeName = tokens.consumeStr();

        Term* typeTerm = find_name(branch, typeName.c_str(), -1, NAME_LOOKUP_TYPE);

        if (typeTerm == NULL) {
            // TODO: This name lookup failure should be recorded.
            typeTerm = ANY_TYPE;
        }

        result = ParseResult(typeTerm, typeName);
    }

    return result;
}

bool token_is_allowed_as_function_name(int token)
{
    switch (token) {
        case tok_For: case tok_If: case tok_Include: case tok_Type: case tok_Not:
            return true;
        default:
            return false;
    }
}

ParseResult function_decl(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    if (tokens.nextIs(tok_Def))
        tokens.consume(tok_Def);

    possible_whitespace(tokens);

    if (tokens.finished()
            || (!tokens.nextIs(tok_Identifier)
            && !token_is_allowed_as_function_name(tokens.next().match))) {
        return compile_error_for_line(branch, tokens, startPosition, "Expected identifier");
    }

    // Function name
    Value functionName;
    tokens.consumeStr(&functionName, tok_Identifier);

    bool isMethod = false;
    Term* methodType = NULL;

    // Check if this is a method declaration (declared as Typename.funcname)
    if (tokens.nextIs(tok_Dot)) {
        isMethod = true;

        tokens.consume(tok_Dot);

        if (!tokens.nextIs(tok_Identifier))
            return compile_error_for_line(branch, tokens, startPosition, "Expected identifier after .");

        Value typeName;
        copy(&functionName, &typeName);
        methodType = find_name(branch, as_cstring(&typeName));
        string_append(&functionName, ".");
        string_append(&functionName, tokens.consumeStr(tok_Identifier).c_str());

        if (methodType == NULL || !is_type(methodType))
            return compile_error_for_line(branch, tokens, startPosition,
                      "Not a type: " + as_string(&typeName));
    }

    Term* result = create_function(branch, as_cstring(&functionName));

    Function* attrs = as_function(result);
    set_starting_source_location(result, startPosition, tokens);
    attrs->name = as_string(&functionName);

    if (methodType != NULL)
        result->setBoolProp("syntax:methodDecl", true);

    result->setStringProp("syntax:postNameWs", possible_whitespace(tokens));

    // Optional list of qualifiers
    while (tokens.nextIs(tok_Name)) {
        std::string symbolText = tokens.consumeStr(tok_Name);
        if (symbolText == ":throws")
            attrs->throws = true;
        else
            return compile_error_for_line(branch, tokens, startPosition,
                    "Unrecognized symbol: "+symbolText);

        symbolText += possible_whitespace(tokens);

        result->setStringProp("syntax:properties", result->stringProp("syntax:properties")
                + symbolText);
    }

    if (!tokens.nextIs(tok_LParen))
        return compile_error_for_line(branch, tokens, startPosition, "Expected: (");

    tokens.consume(tok_LParen);

    Branch* contents = nested_contents(result);

    // Input arguments
    int inputIndex = 0;
    while (!tokens.nextIs(tok_RParen) && !tokens.finished())
    {
        bool isStateArgument = false;

        possible_whitespace(tokens);

        // check for 'state' keyword
        if (tokens.nextIs(tok_State)) {
            tokens.consume(tok_State);
            possible_whitespace(tokens);
            isStateArgument = true;
        }

        Term* typeTerm = NULL;
        if (inputIndex == 0 && isMethod) {
            // For input0 of a method, don't expect an explicit type name.
            typeTerm = methodType;
        } else {
            typeTerm = type_expr(branch, tokens, context).term;
        }

        possible_whitespace(tokens);

        // Optional @, indicating an output.
        bool rebindSymbol = false;
        if (tokens.nextIs(tok_At)) {
            tokens.consume(tok_At);
            rebindSymbol = true;
        }

        std::string name;
        if (tokens.nextIs(tok_Identifier)) {
            name = tokens.consumeStr();
            possible_whitespace(tokens);
        } else {
            // anonymous input; use a default name
            name = get_placeholder_name_for_index(function_num_inputs(attrs));
        }

        // Create an input placeholder term
        Term* input = apply(contents, FUNCS.input, TermList(), name);

        if (is_type(typeTerm))
            change_declared_type(input, as_type(typeTerm));

        if (isStateArgument)
            input->setBoolProp("state", true);

        if (rebindSymbol) {
            input->setBoolProp("output", true);
            input->setBoolProp("syntax:rebindSymbol", true);
        }

        // Variable args when ... is appended
        if (tokens.nextIs(tok_Ellipsis)) {
            std::cout << "ellipsis used in " << as_cstring(&functionName) << std::endl;
            tokens.consume(tok_Ellipsis);
            input->setBoolProp("multiple", true);
            input->flags |= TERM_FLAG_MULTIPLE;
        }

        // Optional list of qualifiers
        while (tokens.nextIs(tok_Name)) {
            std::string symbolText = tokens.consumeStr(tok_Name);

            // TODO: store syntax hint
            if (symbolText == ":ignore_error") {
                input->setBoolProp("ignore_error", true);
            } else if (symbolText == ":optional") {
                input->setBoolProp("optional", true);
            } else if (symbolText == ":output" || symbolText == ":out") {
                input->setBoolProp("output", true);
            } else if (symbolText == ":multiple") {
                input->setBoolProp("multiple", true);
                input->flags |= TERM_FLAG_MULTIPLE;
            } else if (symbolText == ":meta") {
                input->setBoolProp("meta", true);
            } else {
                return compile_error_for_line(branch, tokens, startPosition,
                    "Unrecognized qualifier: "+symbolText);
            }
            possible_whitespace(tokens);
        }

        if (!tokens.nextIs(tok_RParen)) {
            if (!tokens.nextIs(tok_Comma))
                return compile_error_for_line(result, tokens, startPosition, "Expected: ,");

            tokens.consume(tok_Comma);
        }

        inputIndex++;

    } // Done consuming input arguments

    for (int i=0; i < contents->length(); i++)
        hide_from_source(contents->get(i));

    if (!tokens.nextIs(tok_RParen))
        return compile_error_for_line(result, tokens, startPosition);
    tokens.consume(tok_RParen);

    // Another optional list of symbols
    if (tokens.nextNonWhitespaceIs(tok_Name)) {
        possible_whitespace(tokens);
        std::string symbolText = tokens.consumeStr(tok_Name);
        #if 0 // there was once stuff here
        if (symbolText == ":xyz") {
        }
        else
        #endif
        {
            return compile_error_for_line(result, tokens, startPosition,
                "Unrecognized symbol: " + symbolText);
        }
    }

    // Output type
    Term* outputType = VOID_TYPE;

    if (tokens.nextNonWhitespaceIs(tok_RightArrow)) {
        result->setStringProp("syntax:whitespacePreColon", possible_whitespace(tokens));
        tokens.consume(tok_RightArrow);
        result->setStringProp("syntax:whitespacePostColon", possible_whitespace(tokens));

        outputType = type_expr(branch, tokens, context).term;
        ca_assert(outputType != NULL);
    }

    if (!is_type(outputType))
        return compile_error_for_line(result, tokens, startPosition,
                outputType->name +" is not a type");

    ca_assert(is_value(result));
    ca_assert(is_function(result));

    // Create the primary output placeholder
    Term* primaryOutput = append_output_placeholder(contents, NULL);
    change_declared_type(primaryOutput, as_type(outputType));

    // If we're out of tokens, then stop here. This behavior is used when declaring builtins.
    if (tokens.finished()) {
        finish_building_function(as_function(result));
        return ParseResult(result);
    }

    // If we reach this point then the function will be a subroutine.

    // Parse subroutine contents.
    consume_branch(contents, tokens, context);

    finish_building_function(as_function(result));

    ca_assert(is_value(result));
    ca_assert(is_function(result));

    set_source_location(result, startPosition, tokens);

    return ParseResult(result);
}

ParseResult type_decl(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    if (tokens.nextIs(tok_Type))
        tokens.consume();

    possible_whitespace(tokens);

    if (!tokens.nextIs(tok_Identifier))
        return compile_error_for_line(branch, tokens, startPosition);

    std::string name = tokens.consumeStr(tok_Identifier);

    Term* result = anonymous_type_decl(branch, tokens, context).term;

    if (has_static_error(result))
        return ParseResult(result);

    rename(result, name);
    as_type(result)->name = name_from_string(name.c_str());

    return ParseResult(result);
}

ParseResult anonymous_type_decl(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    Term* result = create_value(branch, &TYPE_T);
    as_type(result)->declaringTerm = result;

    // Attributes
    result->setStringProp("syntax:preLBracketWhitespace",
            possible_whitespace_or_newline(tokens));

    while (tokens.nextIs(tok_Name)) {
        std::string s = tokens.consumeStr();

        if (s == ":nocopy") {
            as_type(result)->nocopy = true;
        } else if (s == ":handle") {
            // :handle is a temporary way to declare a handle type
            setup_handle_type(as_type(result));
            result->setBoolProp("handle", true);
            set_type_property(as_type(result), "handle", &TrueValue);
        } else {
            return compile_error_for_line(result, tokens, startPosition,
                "Unrecognized type attribute: " + s);
        }

        possible_whitespace_or_newline(tokens);
    }

    // if there's a semicolon, then finish it as an empty type.
    if (tokens.nextIs(tok_Semicolon)) {
        result->setBoolProp("syntax:semicolon", true);
        return ParseResult(result);
    }

    if (!tokens.nextIs(tok_LBrace) && !tokens.nextIs(tok_LBracket))
        return compile_error_for_line(result, tokens, startPosition);

    // Parse as compound type
    list_t::setup_type(unbox_type(result));
    int closingToken = tokens.nextIs(tok_LBrace) ? tok_RBrace : tok_RBracket;

    tokens.consume();

    result->setStringProp("syntax:postLBracketWhitespace",
            possible_whitespace_or_newline(tokens));

    Branch* contents = nested_contents(result);

    while (!tokens.nextIs(closingToken)) {
        std::string preWs = possible_whitespace_or_newline(tokens);

        if (tokens.nextIs(closingToken))
            break;

        if (!tokens.nextIs(tok_Identifier))
            return compile_error_for_line(result, tokens, startPosition);

        //std::string fieldTypeName = tokens.consume(tok_Identifier);
        Term* fieldType = type_expr(branch, tokens, context).term;

        std::string postNameWs = possible_whitespace(tokens);

        std::string fieldName;

        if (tokens.nextIs(tok_Identifier))
            fieldName = tokens.consumeStr(tok_Identifier);

        Term* field = create_value(contents, as_type(fieldType), fieldName);

        field->setStringProp("syntax:preWhitespace", preWs);
        field->setStringProp("syntax:postNameWs", postNameWs);
        field->setStringProp("syntax:postWhitespace", possible_statement_ending(tokens));
    }

    tokens.consume(closingToken);

    list_initialize_parameter_from_type_decl(contents, &as_type(result)->parameter);

    return ParseResult(result);
}

ParseResult if_block(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    Term* result = apply(branch, FUNCS.if_block, TermList());
    Branch* contents = nested_contents(result);
    if_block_start(contents);

    Term* caseTerm = NULL;
    bool firstIteration = true;
    bool encounteredElse = false;

    while (true) {
        // Consume 'if' or 'elif' or 'else'.
        
        std::string preKeywordWhitespace = possible_whitespace(tokens);

        if (tokens.finished())
            return compile_error_for_line(result, tokens, startPosition);

        int leadingTokenPosition = tokens.getPosition();
        int leadingToken = tokens.next().match;

        // First iteration should always be 'if'
        if (firstIteration)
            ca_assert(leadingToken == tok_If);
        else
            ca_assert(leadingToken != tok_If);

        // Otherwise expect 'elif' or 'else'
        if (leadingToken != tok_If && leadingToken != tok_Elif && leadingToken != tok_Else)
            return compile_error_for_line(result, tokens, startPosition,
                    "Expected 'if' or 'elif' or 'else'");
        tokens.consume();

        bool expectCondition = (leadingToken == tok_If || leadingToken == tok_Elif);

        if (expectCondition) {
            possible_whitespace(tokens);
            Term* condition = infix_expression(branch, tokens, context).term;
            ca_assert(condition != NULL);
            caseTerm = if_block_append_case(contents, condition);
        } else {
            // Create an 'else' block
            encounteredElse = true;
            caseTerm = if_block_append_case(contents, NULL);
            rename(caseTerm, "else");
        }

        caseTerm->setStringProp("syntax:preWhitespace", preKeywordWhitespace);
        set_starting_source_location(caseTerm, leadingTokenPosition, tokens);
        consume_branch(nested_contents(caseTerm), tokens, context);
        branch_finish_changes(nested_contents(caseTerm));

        if (tokens.nextNonWhitespaceIs(tok_Elif)
                || (tokens.nextNonWhitespaceIs(tok_Else) && !encounteredElse)) {

            // If the previous block was multiline, then only parse the next block if
            // it has equal indentation.
            bool wrongIndent = caseTerm->boolPropOptional("syntax:multiline",false)
                && (caseTerm->sourceLoc.col != find_indentation_of_next_statement(tokens));

            if (!wrongIndent) {
                firstIteration = false;
                continue;
            }
        }

        break;
    }

    // If the last block was marked syntax:multiline, then add a lineEnding, so that
    // we don't parse another one.
    if (caseTerm->boolPropOptional("syntax:multiline", false)
            || caseTerm->hasProperty("syntax:lineEnding"))
        result->setStringProp("syntax:lineEnding", "");

    // If we didn't encounter an 'else' block, then create an empty one.
    if (!encounteredElse) {
        Term* elseTerm = if_block_append_case(contents, NULL);
        rename(elseTerm, "else");
        hide_from_source(elseTerm);
    }

    // Move the if_block term to be after the condition terms.
    move_before_final_terms(result);

    finish_if_block(result);
    set_source_location(result, startPosition, tokens);

    return ParseResult(result);
}

ParseResult switch_block(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_Switch);
    possible_whitespace(tokens);

    Term* input = infix_expression(branch, tokens, context).term;

    Term* result = apply(branch, SWITCH_FUNC, TermList(input));

    set_starting_source_location(result, startPosition, tokens);
    consume_branch(nested_contents(result), tokens, context);

    // case_statement may have appended some terms to our branch, so move this
    // term to compensate.
    move_before_final_terms(result);

    switch_block_post_compile(result);
    set_source_location(result, startPosition, tokens);
    set_is_statement(result, true);
    return ParseResult(result);
}

ParseResult case_statement(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_Case);
    possible_whitespace(tokens);

    // Find the parent 'switch' block.
    Term* parent = branch->owningTerm;
    if (parent == NULL || parent->function != SWITCH_FUNC) {
        return compile_error_for_line(branch, tokens, startPosition,
            "'case' keyword must occur inside 'switch' block");
    }

    Branch* parentBranch = parent->owningBranch;

    // Parse the 'case' input, using the branch that the 'switch' is in.
    Term* input = infix_expression(parentBranch, tokens, context).term;

    Term* result = apply(branch, FUNCS.case_func, TermList(input));

    set_starting_source_location(result, startPosition, tokens);
    consume_branch(nested_contents(result), tokens, context);

    set_source_location(result, startPosition, tokens);
    set_is_statement(result, true);
    return ParseResult(result);
}

ParseResult for_block(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_For);
    possible_whitespace(tokens);

    if (!tokens.nextIs(tok_Identifier))
        return compile_error_for_line(branch, tokens, startPosition);

    std::string iterator_name = tokens.consumeStr(tok_Identifier);
    possible_whitespace(tokens);

    if (!tokens.nextIs(tok_In))
        return compile_error_for_line(branch, tokens, startPosition);

    tokens.consume(tok_In);
    possible_whitespace(tokens);

    // check for @ operator
    bool rebindListName = false;
    if (tokens.nextIs(tok_At)) {
        tokens.consume(tok_At);
        rebindListName = true;
        possible_whitespace(tokens);
    }

    Term* listExpr = infix_expression(branch, tokens, context).term;

    Term* forTerm = apply(branch, FUNCS.for_func, TermList(listExpr));
    Branch* contents = nested_contents(forTerm);
    set_starting_source_location(forTerm, startPosition, tokens);
    set_input_syntax_hint(forTerm, 0, "postWhitespace", "");

    forTerm->setBoolProp("modifyList", rebindListName);

    start_building_for_loop(forTerm, iterator_name.c_str());

    consume_branch(contents, tokens, context);

    finish_for_loop(forTerm);
    set_source_location(forTerm, startPosition, tokens);

    // Wrap up the rebound value, if it's a complex lexpr.
    if (rebindListName) {
        Term* lexprRoot = find_lexpr_root(listExpr);
        Term* result = write_setter_chain_from_getter_chain(branch, listExpr, forTerm);
        rename(result, lexprRoot->name);
        result->setBoolProp("syntax:implicitName", true);
    }

    return ParseResult(forTerm);
}

ParseResult while_block(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_While);
    possible_whitespace(tokens);

    Term* conditionExpr = infix_expression(branch, tokens, context).term;

    Term* whileTerm = apply(branch, FUNCS.unbounded_loop, TermList(conditionExpr));
    Branch* contents = nested_contents(whileTerm);
    set_starting_source_location(whileTerm, startPosition, tokens);

    consume_branch(contents, tokens, context);

    finish_while_loop(whileTerm);
    set_source_location(whileTerm, startPosition, tokens);
    return ParseResult(whileTerm);
}

ParseResult do_once_block(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_DoOnce);

    Term* result = apply(branch, DO_ONCE_FUNC, TermList());
    set_starting_source_location(result, startPosition, tokens);
    consume_branch(nested_contents(result), tokens, context);

    return ParseResult(result);
}

ParseResult stateful_value_decl(Branch* branch, TokenStream& tokens, ParserCxt* context)
{
    int startPosition = tokens.getPosition();

    tokens.consume(tok_State);
    possible_whitespace(tokens);

    if (!tokens.nextIs(tok_Identifier))
        return compile_error_for_line(branch, tokens, startPosition,
                "Expected identifier after 'state'");

    std::string name = tokens.consumeStr(tok_Identifier);
    possible_whitespace(tokens);

    std::string typeName;

    // check for "state <type> <name>" syntax
    if (tokens.nextIs(tok_Identifier)) {
        typeName = name;
        name = tokens.consumeStr(tok_Identifier);
        possible_whitespace(tokens);
    }

    // Create the declared_state() term.
    Term* result = apply(branch, FUNCS.declared_state, TermList(), name);

    // Lookup the explicit type
    Type* type = &ANY_T;
    if (typeName != "") {
        Term* typeTerm = find_name(branch, typeName.c_str(), -1, NAME_LOOKUP_TYPE);

        if (typeTerm == NULL) {
            result->setStringProp("error:unknownType", typeName);
        } else {
            type = as_type(typeTerm);
        }
    }

    // Possibly consume an expression for the initial value.
    if (tokens.nextIs(tok_Equals)) {
        tokens.consume();
        possible_whitespace(tokens);

        // If the initial value contains any new expressions, then those live inside
        // the term's nested_contents.

        Term* initialValue = infix_expression(nested_contents(result), tokens, context).term;

        if (type != declared_type(initialValue) && type != &ANY_T) {
            initialValue = apply(nested_contents(result), FUNCS.cast, TermList(initialValue));
            initialValue->setBoolProp("hidden", true);
            change_declared_type(initialValue, type);
        }

        append_output_placeholder(nested_contents(result), initialValue);

        // If an initial value was used and no specific type was mentioned, use
        // the initial value's type.
        if (typeName == "" && initialValue->type != &NULL_T) {
            type = initialValue->type;
        }
    }
